[package]
name = "hexrus"
version = "0.1.0"
authors = ["Athul P <athul929@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { path = "./src/tui" }
termion = "1.5"
memmap = "0.7.0"

[profile.release]
debug = true
